# solar-system

./: CMakeLists.txt  CMakeSettings.json  README.md  images.qrc  shader.qrc
gui/: config.cpp  config.h  glwidget.cpp  glwidget.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
planets/: cone.cpp  cone.h  coordinatesystem.cpp  coordinatesystem.h  deathstar.cpp  deathstar.h  drawable.cpp  drawable.h  orbit.cpp  orbit.h  path.cpp  path.h  planet.cpp  planet.h  ring.cpp  ring.h  saturn.cpp  saturn.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  sun.cpp  sun.h
shader/: cube.vs.glsl  path.vs.glsl  planet.fs.glsl  planet.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  sun.fs.glsl
